更改提供商的路径

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thinkcmf/cmf",
+    "name": "oyswonder/cmf",
     "description": "The ThinkCMF Core Package",
     "license": "Apache-2.0",
     "authors": [
